--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "jsonwebtoken": "^9.0.3",
+    "mongodb": "^6.21.0",
     "mongoose": "^8.21.0",
     "next": "16.1.1",
     "nodemailer": "^7.0.12",
